# CMakeSDK

./: .gitignore  BUCK  CHANGES.md  CMakeLists.txt  README.md  spaces.star  spaces_deps.toml
MySDK/: CMakeLists.txt
SDK/: CMakeLists.txt
cmake/: cmake-sdk-toolchain.cmake  cmake-sdk.cmake  cmsdk-toolchain.cmake  cmsdk.cmake  sos-sdk.cmake  sos-toolchain.cmake
cmake/sdk/: cmake-sdk-app.cmake  cmake-sdk-bsp.cmake  cmake-sdk-internal.cmake  cmake-sdk-lib.cmake  cmake-sdk-variables.cmake  cmsdk-app.cmake  cmsdk-bsp.cmake  cmsdk-internal.cmake  cmsdk-lib.cmake  cmsdk-variables.cmake  cmsdk2-app.cmake  cmsdk2-bsp.cmake  cmsdk2-internal.cmake  cmsdk2-lib.cmake  cmsdk2.cmake  sos-sdk-app.cmake  sos-sdk-bsp.cmake  sos-sdk-internal.cmake  sos-sdk-lib.cmake
cmake/toolchains/: link-clang-toolchain.cmake  link-linux-gcc-toolchain.cmake  link-mingw-toolchain.cmake  rpi32-linux-gcc-toolchain.cmake  rpi64-linux-gcc-toolchain.cmake  sos-gcc-toolchain.cmake
cmake/toolchains/Platform/: StratifyOS.cmake
cmake/toolchains/cross/: sos-base.cmake  sos-clang-toolchain.cmake  sos-gcc-toolchain.cmake
cmake/toolchains/native/: link-linux-gcc-toolchain.cmake  link-mingw-toolchain.cmake
cmake/toolchains/processor/: IMXRT1050.cmake  cm7.cmake
include/mcu/: api.h  types.h
include/sdk/: api.h  ioctl.h  types.h
scripts/: bootstrap.cmake  profile.sh  sos-bootstrap.cmake
spaces_assets/: clang-format  profile.sh
